# ME700HW1

./: Example3Bisection.py  Example4MechBisection.py  Example5MechBisection.py  README.md  assignment_1_genAIuse.txt  newtons_method_tutorial.ipynb  pyproject.toml
.github/workflows/: python-app.yml  tests.yml
Bisection/: Example1Bisection.py  Example2Bisection.py  Example3Bisection.py  Example4MechBisection.py  aExample5MechBisection.py
Elasto-plastic/: ReadMe.md  Tutorial.py  Tutorials.ipynb  test_MaterialModel  test_MaterialModel.py
Newton/: Example1Newton.py  Example2Newton  Example3Newton  Example4MechNewton.py  Example5MechNewton.py  NewtonMainScriptHW1.py  ReadMe.md  pyproject.toml  test_NewtonMainScriptHW1.py
src/: bisection_functions.py
src/bisection/: bisection_tutorial.ipynb  bisection_tutorial.py  test_bisection.py
src/elasto-plastic/: elasto-plastic_functions.py
src/elastoplastic/: elastoplastic_functions.py  elastoplastic_tutorial.ipynb  test_elastoplastic.py
src/newton/: newton_functions.py  newton_tutorial.ipynb  test_newton.py
tests/: test_MaterialModel.py  test_bisection.py  test_elasto-plastic.py  test_elastoplastic.py  test_newton.py
tutorials/: elastoplastic_tutorial.ipynb  newton_tutorial.ipynb  newton_tutorial.md  newtons_method_tutorial.ipynb
